updating db client and registry
