# restapi/operations/events/get_event_attendees_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package events
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/sctskw/attend.io/models"
+)
+
+// GetEventAttendeesOKCode is the HTTP code returned for type GetEventAttendeesOK
+const GetEventAttendeesOKCode int = 200
+
+/*GetEventAttendeesOK the list of attendees from the event
+
+swagger:response getEventAttendeesOK
+*/
+type GetEventAttendeesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.AttendeesList `json:"body,omitempty"`
+}
+
+// NewGetEventAttendeesOK creates GetEventAttendeesOK with default headers values
+func NewGetEventAttendeesOK() *GetEventAttendeesOK {
+
+	return &GetEventAttendeesOK{}
+}
+
+// WithPayload adds the payload to the get event attendees o k response
+func (o *GetEventAttendeesOK) WithPayload(payload models.AttendeesList) *GetEventAttendeesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get event attendees o k response
+func (o *GetEventAttendeesOK) SetPayload(payload models.AttendeesList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetEventAttendeesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.AttendeesList{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*GetEventAttendeesDefault generic error response
+
+swagger:response getEventAttendeesDefault
+*/
+type GetEventAttendeesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetEventAttendeesDefault creates GetEventAttendeesDefault with default headers values
+func NewGetEventAttendeesDefault(code int) *GetEventAttendeesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetEventAttendeesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get event attendees default response
+func (o *GetEventAttendeesDefault) WithStatusCode(code int) *GetEventAttendeesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get event attendees default response
+func (o *GetEventAttendeesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get event attendees default response
+func (o *GetEventAttendeesDefault) WithPayload(payload *models.Error) *GetEventAttendeesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get event attendees default response
+func (o *GetEventAttendeesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetEventAttendeesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
